--- a/lang/zh-CN/common.json
+++ b/lang/zh-CN/common.json
@@ -1,5 +1,50 @@
 {
-  "Test": {
-    "test": "test cn"
+  "site": {
+    "name": "Rocks Dev",
+    "description": "全面的开发者工具集合"
+  },
+  "nav": {
+    "categories": "分类",
+    "home": "首页",
+    "menu": "菜单",
+    "github": "GitHub",
+    "tools": {
+      "title": "工具",
+      "json": {
+        "title": "JSON 工具",
+        "formatter": {
+          "title": "JSON 格式化工具",
+          "description": "使用高级工具格式化和验证 JSON 数据"
+        },
+        "validator": {
+          "title": "JSON 验证工具",
+          "description": "验证 JSON 结构和模式"
+        },
+        "minifier": {
+          "title": "JSON 压缩工具",
+          "description": "压缩和精简 JSON 数据"
+        },
+        "diff": {
+          "title": "JSON 对比工具",
+          "description": "比较和查找 JSON 文件之间的差异"
+        }
+      },
+      "seo": {
+        "title": "SEO 工具",
+        "description": "搜索引擎优化工具"
+      },
+      "converters": {
+        "title": "转换工具",
+        "description": "在不同数据格式之间转换"
+      },
+      "text": {
+        "title": "文本工具",
+        "description": "文本处理和格式化工具"
+      },
+      "dev": {
+        "title": "开发工具",
+        "description": "开发者实用工具和格式化工具"
+      }
+    }
   }
 }
