--- a/lang/zh-HK/json.json
+++ b/lang/zh-HK/json.json
@@ -15,6 +15,18 @@
       "placeholder": "粘貼你的 JSON 數據...",
       "title": "JSON 格式化器",
       "upload": "上傳 JSON"
+    },
+    "validator": {
+      "description": "Validate your JSON data with advanced tools.",
+      "error": {
+        "empty": "輸入不能為空",
+        "invalid": "無效的 JSON"
+      },
+      "input": "輸入 JSON",
+      "invalid": "JSON 無效",
+      "title": "JSON 驗證器",
+      "valid": "JSON 有效",
+      "validate": "驗證"
     }
   }
 }
