--- a/lang/zh-HK/common.json
+++ b/lang/zh-HK/common.json
@@ -1,10 +1,20 @@
 {
+  "dock": {
+    "add": "添加到 Dock"
+  },
   "home": {
-    "freeFastReliable": "免費、快速、可靠的開發者工具。無數據收集，只有工具。",
     "ads": "嗯...我們確實有一些廣告~",
-    "rocksDevTools": "RocksDev.工具",
+    "freeFastReliable": "免費、快速、可靠的開發者工具。無數據收集，只有工具。",
+    "freeForever": "免費永遠",
+    "freeForeverDescription": "所有工具都是免費的，並且將永遠免費使用。沒有高級功能。",
     "freeOpenSource": "免費 & 開源",
+    "noTracking": "無跟踪",
+    "noTrackingDescription": "我們不跟踪或存儲任何數據。所有工具都在您的瀏覽器中運行。",
+    "openSource": "開源",
+    "openSourceDescription": "所有工具都是開源的，並可在 GitHub 上貢獻。",
+    "rocksDevTools": "RocksDev.工具",
     "starOnGitHub": "在 GitHub 上點贊",
+    "tools": "工具",
     "tryNow": "立即試用"
   },
   "nav": {
@@ -15,22 +25,23 @@
     "menu": "選單",
     "tools": {
       "converters": {
-        "description": "在不同數據格式之間轉換",
-        "title": "轉換工具",
         "base64": {
           "description": "將 Base64 轉換為其他格式",
           "title": "Base64 轉換器"
-        }
+        },
+        "description": "在不同數據格式之間轉換",
+        "title": "轉換工具"
       },
       "dev": {
         "description": "開發者實用工具和格式化工具",
-        "title": "開發工具",
         "regex": {
           "description": "測試和驗證正則表達式",
           "title": "正則表達式測試工具"
-        }
+        },
+        "title": "開發工具"
       },
       "json": {
+        "description": "JSON 工具",
         "diff": {
           "description": "比較和尋找 JSON 檔案之間的差異",
           "title": "JSON 比較工具"
@@ -60,26 +71,23 @@
       "title": "工具"
     }
   },
-  "site": {
-    "description": "全面的開發者工具集合",
-    "name": "Rocks Dev"
-  },
   "not-found": {
     "description": "您正在尋找的頁面可能已被刪除、名稱已更改或暫時不可用。",
     "go-back": "返回",
     "return-home": "返回首頁",
     "title": "頁面未找到"
   },
+  "site": {
+    "description": "全面的開發者工具集合",
+    "name": "Rocks Dev"
+  },
   "supportOverlay": {
-    "title": "享受我們的開發者工具？",
     "description": "感謝使用我們的工具！如果它們幫助您使開發變得更輕鬆，請考慮支持此項目以保持其免費和增長。",
     "description2": "每個貢獻都有助於維護和改進這些工具！",
     "description3": "支持開發",
     "description4": "您的星星有助於其他人發現這些工具！",
     "starOnGitHub": "在 GitHub 上點贊",
+    "title": "享受我們的開發者工具？",
     "yourStarHelps": "您的星星有助於其他人發現這些工具！"
-  },
-  "dock": {
-    "add": "添加到 Dock"
   }
 }
